# ai-simulacra-agents

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  STATUS.md  WEEK1_VALIDATION_REPORT.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: agents.json  world.json
docs/: README.md  cognitive-architecture.md  getting-started.md  quickstart.md  what-is-this.md  world-configuration.md
docs/advanced/: architecture-overview.md  cognitive-systems.md  research-methodology.md
docs/agents/: behavior-system.md  memory-system.md
docs/concepts/: how-agents-think.md  memory-and-learning.md
docs/examples/: basic-scenarios.md
docs/guides/: understanding-agents.md  your-first-simulation.md
docs/reference/: cli-commands.md
docs/research/: citations.md
docs/simulation/: action-system.md  time-management.md  world-state.md
docs/storage/: README.md
scripts/: init_db.py  setup_env.py
src/simulacra/: __init__.py
src/simulacra/agents/: __init__.py  memory_manager.py  planning_engine.py  reflection_engine.py
src/simulacra/cli/: __init__.py  main.py
src/simulacra/config/: __init__.py  agent_config.py  settings.py  world_config.py
src/simulacra/llm/: __init__.py  embedding_service.py  importance_scorer.py  llm_service.py  ollama_client.py
src/simulacra/logging/: __init__.py  data_exporter.py  rich_terminal_logger.py  simulation_logger.py
src/simulacra/models/: __init__.py  action.py  agent.py  event.py  memory.py  planning.py  world.py
src/simulacra/simulation/: __init__.py  action_executor.py  llm_behavior.py  simple_behavior.py  simulation_controller.py  time_manager.py  world_manager.py
src/simulacra/storage/: __init__.py  sqlite_store.py  vector_store.py
src/simulacra/storage/migrations/: 001_initial_schema.sql
tests/: conftest.py
tests/unit/: test_llm.py  test_storage.py
